# LLM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: llm.yml
llm/: config.py
llm/core/: alice.py  amazon.py  embeddings.py  functions.py  rnn.py  sentiment_analysis.py  visualization.py
llm/data/: Prometheus.txt  alice_chap_one.txt  alice_parag_one.txt
llm/images/: entities.ps  score
llm/jupyter-notebooks/: Basic_RNN.ipynb  RNN.ipynb  alice.ipynb  amazon.ipynb  sentiment_analysis.ipynb
llm/shared/: __init__.py  shared_utils.py
llm/tests/: test_alice.py  test_amazon.py  test_rrn.py  test_sentiment_analysis.py
