[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Marco Di Gennaro <m.di.gennaro@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
torch = "^2.3.0"
jupyterlab = "^4.2.0"
jupyterlab-execute-time = "^3.1.2"
pytest = "^8.2.0"
pre-commit = "^3.7.0"
coverage = "^7.5.1"
nltk = "^3.8.1"
textblob = "^0.18.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
svgling = "^0.4.0"
ipywidgets = "^8.1.2"
transformers = "^4.40.2"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
graphviz = "^0.20.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
